--- a/app.json
+++ b/app.json
@@ -26,6 +26,10 @@
             "description": "Silakan isi Mongo Db/Mongo Url . Jika Build Redis Gagal . Cara ambil nya ketik #tutor di @kynansupport.",
             "required": true
         },
+        "DB_NAME": {
+            "description": "Silakan isi DB_NAME. BEBAS ISI APA AJA",
+            "required": true
+        },
         "HEROKU_API": {
             "description": "Isi Coy Jan Dikosongin.",
             "required": true
